objects/VPPSR_NevdisData__c.object
<CustomObject>
    <fields>
        <fullName>Search_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Search Result</label>
        <referenceTo>VPPSR_Search_Result__c</referenceTo>
        <relationshipName>Collateral_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>stolen_detail__c</fullName>
        <label>stolen detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>verification_Status__c</fullName>
        <label>verification Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR NevdisData</label>
    <nameField>
        <displayFormat>VND-{000000}</displayFormat>
        <label>NevdisData Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VPPSR NevdisData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>